tests/typecheck/good/branch-match.scilla
tfun 'X =>
tfun 'A =>
 fun (f : 'A -> 'X) =>
 fun (g : 'A -> 'X) =>
 fun (a : 'A) =>
 fun (c : Bool) =>
 match c with
 | True =>  f a
 | False => g a
 end
 